Finished main page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet"> 
+        <meta charset="UTF-8">
     </head>
     <body>
-        <h1>HeatForge</h1>
+        <div class="navBar">
+            <button><b>Contact</b></button>
+            <button><b>Projects</b></button>
+            <button><b>Portfolio</b></button>
+        </div>
+        <div class="namePfp">
+            <img src="Fire.jpg" class="pfp">
+            <h1>Artist, Game Designer and Programmer</h1>
+        </div>
+        <div class="contentBox">
+            <div class="content">
+                <h3>Artist</h3>
+                <p>I have started art as a hobby that I very much enjoy. As of right now I am pursuing art as a great passion of mine, hoping that one day it will become my job.
+                    I don't have much skill but it is something I am hoping to aleviate in the future.
+                </p>
+            </div>
+            <div class="content">
+                <h3>Game Design</h3>
+                <p>
+                    I am currently working on my first game Alchimist that I believe is nearing it's completion after that I plan on developing far more games.
+                    I hope that I can still make these games until I run out of ideas.
+                </p>
+            </div>
+            <div class="content">
+                <h3>Programming</h3>
+                <p>
+                    Right now only field of programming I geniuenly specialize in is game programming. However I know how to code in Python, Lua and JavaScript.
+                    I am also skilled in web development and building interactive websites. I have multiple plans for my future in classic programming.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
