--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="navBar">
-            <button><b>Contact</b></button>
+            <a href="contacts.html"><button><b>Contact</b></button></a>
             <button><b>Projects</b></button>
             <button><b>Portfolio</b></button>
         </div>
