--- a/projects.html
+++ b/projects.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet"> 
+        <meta charset="UTF-8">
     </head>
     <body>
         <div class="navBar">
-            <a href="projects.html"><button><b>Projects</b></button></a>
+            <a href="contacts.html"><button><b>Contact</b></button></a>
             <a href="index.html"><button><b>Main</b></button></a>
             <a href="portfolio.html"><button><b>Portfolio</b></button></a>
         </div>
