Prepared Portfolio Page

--- a/contacts.html
+++ b/contacts.html
@@ -11,5 +11,16 @@
             <a href="index.html"><button><b>Main</b></button></a>
             <a href="portfolio.html"><button><b>Portfolio</b></button></a>
         </div>
+        <div class="socTitle">
+            <h1>My social links you can follow or contact me on</h1>
+        </div>
+        <div class="socColumn">
+            <a href="https://www.deviantart.com/heattheforge"><img src="deviantartIcon.jpg" class="socLink"></a>
+            <img src="discord.png" class="socLink">
+            <h4>Heat#0964</h4>
+            <a href="https://pinterest.com/heattheofrge/"><img src="pinterest.png" class="socLink"></a>
+            <img src="guilded.jpg" class="socLink">
+            <h4>HeatForge</h4>
+        </div>
     </body>
 </html>
