--- a/portfolio.html
+++ b/portfolio.html
@@ -11,5 +11,15 @@
             <a href="index.html"><button><b>Main</b></button></a>
             <a href="projects.html"><button><b>Projects</b></button></a>
         </div>
+        <div class="gallery">
+            <img src="Fire.jpg">
+            <img src="Images/Book.jpg">
+            <img src="Images/Slime.jpg">
+            <img src="Images/Eye.jpg">
+            <img src="Images/Hamster.jpg">
+            <img src="Images/Knife.jpg">
+            <img src="Images/Ice.jpg">
+            <!--<img src="Images/Archer.jpg">-->
+        </div>
     </body>
 </html>
