--- a/projects.html
+++ b/projects.html
@@ -11,5 +11,8 @@
             <a href="index.html"><button><b>Main</b></button></a>
             <a href="portfolio.html"><button><b>Portfolio</b></button></a>
         </div>
+        <div class="namePfp">
+            <h1>There will be projects uploaded soon.</h1>
+        </div>
     </body>
 </html>
