Commented out portfolio for now

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="navBar">
             <a href="contacts.html"><button><b>Contact</b></button></a>
             <a href="projects.html"><button><b>Projects</b></button></a>
-            <a href="portfolio.html"><button><b>Portfolio</b></button></a>
+            <!--<a href="portfolio.html"><button><b>Portfolio</b></button></a>-->
         </div>
         <div class="namePfp">
             <img src="Fire.jpg" class="pfp">
