--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
         <div class="navBar">
             <a href="contacts.html"><button><b>Contact</b></button></a>
             <a href="index.html"><button><b>Main</b></button></a>
-            <a href="portfolio.html"><button><b>Portfolio</b></button></a>
+            <!--<a href="portfolio.html"><button><b>Portfolio</b></button></a>-->
         </div>
         <div class="namePfp">
             <h1>There will be projects uploaded soon.</h1>
