--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="navBar">
-            <a href="projects.html"><button><b>Projects</b></button></a>
+            <!--<a href="projects.html"><button><b>Projects</b></button></a>-->
             <a href="index.html"><button><b>Main</b></button></a>
             <!--<a href="portfolio.html"><button><b>Portfolio</b></button></a>-->
         </div>
