--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
         <div class="navBar">
             <!--<a href="projects.html"><button><b>Projects</b></button></a>-->
             <a href="index.html"><button><b>Main</b></button></a>
-            <!--<a href="portfolio.html"><button><b>Portfolio</b></button></a>-->
+            <a href="portfolio.html"><button><b>Portfolio</b></button></a>
         </div>
         <div class="socTitle">
             <h1>My social links you can follow or contact me on</h1>
