--- a/portfolio.html
+++ b/portfolio.html
@@ -12,13 +12,12 @@
             <a href="projects.html"><button><b>Projects</b></button></a>
         </div>
         <div class="gallery">
-            <img src="Fire.jpg">
-            <img src="Images/Book.jpg">
-            <img src="Images/Slime.jpg">
-            <img src="Images/Eye.jpg">
-            <img src="Images/Hamster.jpg">
-            <img src="Images/Knife.jpg">
-            <img src="Images/Ice.jpg">
+            <img src="Images/IMG_0341.jpg">
+            <img src="Images/IMG_0342.jpg">
+            <img src="Images/IMG_0343.jpg">
+            <img src="Images/IMG_0344.jpg">
+            <img src="Images/IMG_0345.jpg">
+            <img src="Images/Course_Training.jpg">
             <!--<img src="Images/Archer.jpg">-->
         </div>
     </body>
