--- a/index.html
+++ b/index.html
@@ -1,41 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet"> 
-        <meta charset="UTF-8">
-    </head>
-    <body>
-        <div class="navBar">
-            <a href="contacts.html"><button><b>Contact</b></button></a>
-            <!--<a href="projects.html"><button><b>Projects</b></button></a>-->
-            <!--<a href="portfolio.html"><button><b>Portfolio</b></button></a>-->
-        </div>
-        <div class="namePfp">
-            <img src="Fire.jpg" class="pfp">
-            <h1>Artist, Game Designer and Programmer</h1>
-        </div>
-        <div class="contentBox">
-            <div class="content">
-                <h3>Artist</h3>
-                <p>I have started art as a hobby that I very much enjoy. As of right now I am pursuing art as a great passion of mine, hoping that one day it will become my job.
-                    I don't have much skill but it is something I am hoping to aleviate in the future.
-                </p>
-            </div>
-            <div class="content">
-                <h3>Game Design</h3>
-                <p>
-                    I am currently working on my first game Alchimist that I believe is nearing it's completion after that I plan on developing far more games.
-                    I hope that I can still make these games until I run out of ideas.
-                </p>
-            </div>
-            <div class="content">
-                <h3>Programming</h3>
-                <p>
-                    Right now only field of programming I geniuenly specialize in is game programming. However I know how to code in Python, Lua and JavaScript.
-                    I am also skilled in web development and building interactive websites. I have multiple plans for my future in classic programming.
-                </p>
-            </div>
-        </div>
-    </body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>vue-weather</title><script defer="defer" src="/js/chunk-vendors.4e279cd9.js"></script><script defer="defer" src="/js/app.57b83053.js"></script><link href="/css/app.92d4bb6c.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but vue-weather doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
